@@ -1,3 +1,5 @@
+# This is the good case where there are no missing methods on either side.
+
 require 'test/unit/testcase'
 
 class Blah
@@ -10,9 +12,15 @@ class Blah
 end
 
 class TestBlah < Test::Unit::TestCase
-  def test_notmissing1; end
-  def test_notmissing2_ext1; end
-  def test_notmissing2_ext2; end
+  def test_notmissing1
+    assert(true, "a test")
+  end
+  def test_notmissing2_ext1
+    assert(true, "a test")
+  end
+  def test_notmissing2_ext2
+    flunk("a failed test")
+  end
   def test_missingimpl; end
   def test_missingtest; end
 end
