@@ -10,5 +10,5 @@ class TestBlah < Test::Unit::TestCase
   def test_notmissing1; end
   def test_notmissing2_ext1; end
   def test_notmissing2_ext2; end
-  def test_missingimpl; end
+  def test_missingimpl; Blah.new.missingimpl; end
 end
