@@ -1,4 +1,16 @@
 ###############################################################################
+2003-01-07 2.1.0				   02 major / 01 minor / 03 bug
+
+	! Output is runnable as-is thanks to zentestrunner.rb.
+	! Wrapped up all running functionality into ZenTest.fix
+	! Added simple statistic output... Thanks Dave & Andy!!!
+	+ Added zentestrunner.rb until Nathaniel accepts my changes!
+	- Removed at_exit override and avoided test/unit altogether.
+	- Added a clean rule to Makefile
+	- Extended README.txt to include some of the rules.
+	- Fixed several tests and added assertions for new stats
+
+###############################################################################
 2002-10-29 2.0.0				   02 major / 00 minor / 00 bug
 
 	! Rewrite of ZenTest.rb into actual OO design.
